classDiagram

%% ===================== CONFIG =====================
class CacheStrategy {
  <<enum>>
  MEMORY_ONLY
  PERSISTENT
  HYBRID
}

class Config {
  +load_feed_urls() List~str~
  +save_feed_urls(urls: List~str~)
}

%% ===================== FETCHERS =====================
class FetchResult {
  +ok: bool
  +content: bytes
  +status_code: int
  +error: str
  +cached: bool
  +from_cache: bool
  +age: float
}

class CachedURLFetcher {
  -timeout: float
  -retries: int
  -cache: Cache
  +fetch(url, force_refresh) FetchResult
  +fetch_batch(urls) Dict
  +clear_cache()
  +get_cache_stats() Dict
}

class Cache {
  -config: CacheConfig
  -stats: CacheStats
  +get(url) CachedResponse
  +set(url, response)
  +delete(url)
  +clear()
  +get_stats() Dict
}

class CacheConfig {
  +enabled: bool
  +strategy: CacheStrategy
  +ttl: timedelta
}

class CachedResponse {
  +content: bytes
  +status_code: int
  +headers: Dict
  +cached_at: datetime
  +is_fresh(ttl) bool
}

class CacheStats {
  +hits: int
  +misses: int
  +hit_rate: float
}

CachedURLFetcher --> Cache
Cache --> CacheConfig
Cache --> CachedResponse
Cache --> CacheStats
CacheConfig --> CacheStrategy

%% ===================== PARSERS =====================
class DateParser {
  +parse(date_str) str
}

class DateParseStrategy {
  <<abstract>>
  +parse(date_str) datetime
}

class ISOFormatStrategy
class ISOFormatTzStrategy
class RFCFormatStrategy
class RFCFormatTz1Strategy
class RFCFormatTz2Strategy

DateParseStrategy <|-- ISOFormatStrategy
DateParseStrategy <|-- ISOFormatTzStrategy
DateParseStrategy <|-- RFCFormatStrategy
DateParseStrategy <|-- RFCFormatTz1Strategy
DateParseStrategy <|-- RFCFormatTz2Strategy

class DateParseStrategyResolver {
  +resolve(date_str) DateParseStrategy
}

DateParser --> DateParseStrategyResolver
DateParseStrategyResolver --> DateParseStrategy

class FeedItem {
  +source: str
  +title: str
  +date: str
  +link: str
  +parsed_date() datetime
}

class BaseFeedParser {
  <<abstract>>
  +parse() List~FeedItem~
}

class AtomParser
class RSS1Parser
class RSS2Parser

BaseFeedParser <|-- AtomParser
BaseFeedParser <|-- RSS1Parser
BaseFeedParser <|-- RSS2Parser

class FeedParserCore {
  +parse() List~FeedItem~
}

FeedParserCore --> BaseFeedParser
BaseFeedParser --> DateParser
FeedParserCore --> FeedItem

class PageParser {
  -fetcher: URLFetcher
  +get_content(url) str
}

PageParser --> CachedURLFetcher

%% ===================== APP LAYER =====================
class FeedFetcher {
  +fetch(url) bytes
}

class FeedParserService {
  +parse(xml_bytes) List~FeedItem~
}

class FeedSorter {
  +sort(items) List
}

class FeedManager {
  -urls: List~str~
  +get_entries() List
}

FeedFetcher --> CachedURLFetcher
FeedParserService --> FeedParserCore
FeedManager --> FeedFetcher
FeedManager --> FeedParserService
FeedManager --> FeedSorter
FeedManager --> FeedItem

class FeedApp {
  +run()
}

FeedApp --> FeedManager
FeedApp --> PageParser
FeedApp --> UIComponentFactory
FeedApp --> UI

%% ===================== UI =====================
class UI {
  +launch()
}

class UIModel {
  +move_down()
  +move_up()
  +get_selected_entry() FeedItem
}

class UIRenderer {
  +draw()
  +draw_details()
}

class UIController {
  +run()
}

class UIComponent {
  <<abstract>>
  +draw()
}

class TitleBar
class EntryList
class EntryDetails

UIComponent <|-- TitleBar
UIComponent <|-- EntryList
UIComponent <|-- EntryDetails

class UIComponentFactory {
  +create_component(type) UIComponent
}

UI --> UIModel
UI --> UIRenderer
UI --> UIController

UIRenderer --> UIComponentFactory
UIRenderer --> EntryDetails
UIController --> UIModel
UIController --> UIRenderer

EntryDetails --> PageParser

%% ===================== COMMANDS =====================
class Command {
  <<abstract>>
  +execute()
}

class MoveUpCommand
class MoveDownCommand
class ScrollLeftCommand
class ScrollRightCommand
class ShowDetailsCommand
class QuitCommand
class ScrollUpCommand
class ScrollDownCommand
class QuitDetailsCommand

Command <|-- MoveUpCommand
Command <|-- MoveDownCommand
Command <|-- ScrollLeftCommand
Command <|-- ScrollRightCommand
Command <|-- ShowDetailsCommand
Command <|-- QuitCommand
Command <|-- ScrollUpCommand
Command <|-- ScrollDownCommand
Command <|-- QuitDetailsCommand

UIController --> Command